website summarization with ollama

--- a/website-summarization/ollama_website_summarize.ipynb
+++ b/website-summarization/ollama_website_summarize.ipynb
@@ -2,17 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "310f6402-df09-42e4-8bfa-ae2c15844f00",
+   "execution_count": 5,
+   "id": "dfff6b32-0ee3-457a-97d9-479f0897be33",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ollama\n",
     "import requests\n",
     "import os\n",
-    "from bs4 import BeautifulSoup\n",
-    "from openai import OpenAI\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "583e3df1-7aa4-41ec-941a-721d32c5281b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OLLAMA_API = \"http://localhost:11434/api/chat\"\n",
+    "HEADERS = {\"Content-Type\": \"application/json\"}\n",
+    "MODEL= \"llama3.2:1b\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4235348e-cc36-4ffb-920a-e3e9c5e8ff89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "headers = {\n",
     " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
     "}\n",
@@ -30,14 +49,13 @@
     "        self.title = soup.title.string if soup.title else \"No title found\"\n",
     "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
     "            irrelevant.decompose()\n",
-    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
-    "\n"
+    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bae0680a-5933-4ed9-bfff-974252bbb269",
+   "execution_count": 13,
+   "id": "053708fd-38cc-4f97-bbd5-9a8dfc75a5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +69,13 @@
     "        If it includes news or announcements, then summarize these too.\\n\\n\"\n",
     "    user_prompt += website.text\n",
     "    return user_prompt\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e94446ec-a704-4fe2-ba5c-2d1ced8a91f5",
+   "execution_count": 14,
+   "id": "a0e8819e-5da7-4a77-a13e-47b8fd2ce1c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,63 +85,47 @@
     "        {\"role\": \"system\", \"content\": system_prompt},\n",
     "        {\"role\": \"user\", \"content\": get_user_prompt(web)}\n",
     "        ]\n",
-    "    openai = OpenAI()\n",
-    "    response = openai.chat.completions.create(model = \"gpt-4o-mini\", messages = messages)\n",
-    "    response = openai.chat.completions.create(\n",
-    "        model = \"gpt-4o-mini\",\n",
-    "        messages = messages\n",
-    "    )\n",
-    "    print(response.choices[0].message.content)\n",
+    "    response = ollama.chat(model = MODEL, messages = messages)\n",
+    "    print(response['message']['content'])\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dbcf1aa9-1c2c-43dd-9a97-54aff0c32459",
+   "execution_count": 15,
+   "id": "09fc5875-e05b-4123-a3c8-e2305317f1da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Summary of Edward Donner's Website\n",
+      "The article lists several key events and developments from the year 2023, including:\n",
       "\n",
-      "The website is maintained by Ed Donner, a co-founder and CTO of **Nebula.io**, a company focused on harnessing AI to enhance talent discovery and management. Ed has a background in coding, experimentation with LLMs (Large Language Models), and a passion for DJing and amateur electronic music.\n",
+      "1. The Ukraine-Russia War: The conflict between Ukraine and Russia continued to escalate, with airstrikes and fighting reported in eastern Ukraine.\n",
+      "2. Russia's invasion of Poland: Poland was invaded by Russian forces, leading to widespread condemnation and military aid from NATO countries.\n",
+      "3. Elon Musk's Twitter feud: Musk clashed with several high-profile users on Twitter, including celebrities like Kim Kardashian and Taylor Swift.\n",
+      "4. The US Presidential Election: The 2024 US presidential election is still ongoing, but it has already begun with debates between incumbent President Joe Biden and challenger Donald Trump.\n",
+      "5. COVID-19 vaccination efforts: The rollout of COVID-19 vaccines continued globally, with many countries reporting significant progress in terms of vaccination rates.\n",
       "\n",
-      "## Key Features:\n",
-      "- **Outsmart**: An innovative arena where LLMs compete in diplomacy and strategy.\n",
-      "- **About Ed**: Ed describes his interests, his journey in tech, and his previous role as the founder and CEO of AI startup **untapt**, which was acquired in 2021.\n",
-      "- **Connect**: Visitors are encouraged to connect with Ed, and he offers a newsletter subscription for updates.\n",
+      "The article also mentions some notable figures and events that were mentioned or discussed in 2023, including:\n",
       "\n",
-      "## News and Announcements:\n",
-      "- **December 21, 2024**: Welcome to SuperDataScientists!\n",
-      "- **November 13, 2024**: Mastering AI and LLM Engineering – Resources.\n",
-      "- **October 16, 2024**: From Software Engineer to AI Data Scientist – Resources.\n",
-      "- **August 6, 2024**: Introduction to the Outsmart LLM Arena – a competition centered on strategy and diplomacy among LLMs.\n"
+      "* Elon Musk's net worth increased significantly due to his successful Twitter feud.\n",
+      "* The discovery of a new species of dinosaur fossil in the United States.\n",
+      "* The launch of the SpaceX Starship, a reusable spacecraft designed for space travel.\n",
+      "\n",
+      "Overall, the article suggests that 2024 has been marked by significant global events and developments, including conflicts, elections, and technological advancements.\n"
      ]
     }
    ],
    "source": [
-    "load_dotenv()\n",
-    "\n",
-    "openapi_key = os.getenv('OPENAI_API_KEY')\n",
-    "\n",
     "summarize(\"https://cnn.com\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c9227a-8d2d-4198-af0b-ffdba456d225",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d69d5d4-ee3b-4ff8-8fe6-b11d2ebe87f8",
+   "id": "5832eb3a-522d-48aa-a1f3-9a32434e5e53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -146,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
