--- a/website-summarization/website_summarize_openai.ipynb
+++ b/website-summarization/website_summarize_openai.ipynb
@@ -2,41 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "310f6402-df09-42e4-8bfa-ae2c15844f00",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import nbimporter\n",
     "import requests\n",
     "import os\n",
     "from bs4 import BeautifulSoup\n",
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
-    "\n",
-    "headers = {\n",
-    " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
-    "}\n",
-    "\n",
-    "class Website:\n",
-    "\n",
-    "    url: str\n",
-    "    title: str\n",
-    "    text: str\n",
-    "\n",
-    "    def __init__(self, url):\n",
-    "        self.url = url\n",
-    "        response = requests.get(url, headers=headers)\n",
-    "        soup = BeautifulSoup(response.content, 'html.parser')\n",
-    "        self.title = soup.title.string if soup.title else \"No title found\"\n",
-    "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
-    "            irrelevant.decompose()\n",
-    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
-    "\n"
+    "from common import Website\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "bae0680a-5933-4ed9-bfff-974252bbb269",
    "metadata": {},
    "outputs": [],
@@ -57,13 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "e94446ec-a704-4fe2-ba5c-2d1ced8a91f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def summarize(url):\n",
-    "    web = Website(url)\n",
+    "    headers = {\n",
+    "         \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
+    "    }\n",
+    "    web = Website(url, headers=headers)\n",
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": system_prompt},\n",
     "        {\"role\": \"user\", \"content\": get_user_prompt(web)}\n",
@@ -80,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "dbcf1aa9-1c2c-43dd-9a97-54aff0c32459",
    "metadata": {},
    "outputs": [
@@ -88,20 +73,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Summary of Edward Donner's Website\n",
+      "# The Oatmeal - Comics by Matthew Inman\n",
       "\n",
-      "The website is maintained by Ed Donner, a co-founder and CTO of **Nebula.io**, a company focused on harnessing AI to enhance talent discovery and management. Ed has a background in coding, experimentation with LLMs (Large Language Models), and a passion for DJing and amateur electronic music.\n",
+      "The Oatmeal is a website created by cartoonist Matthew Inman, where he has been publishing comics since 2009. The site features various content, including:\n",
       "\n",
-      "## Key Features:\n",
-      "- **Outsmart**: An innovative arena where LLMs compete in diplomacy and strategy.\n",
-      "- **About Ed**: Ed describes his interests, his journey in tech, and his previous role as the founder and CEO of AI startup **untapt**, which was acquired in 2021.\n",
-      "- **Connect**: Visitors are encouraged to connect with Ed, and he offers a newsletter subscription for updates.\n",
+      "- **Comics**: A collection of humorous and engaging comics spanning different themes.\n",
+      "- **Animations**: New animated content that brings some of the comics to life.\n",
+      "- **Games**: Card games developed by Inman, including popular titles like *Exploding Kittens* and *Throw Throw Burrito*.\n",
+      "- **Books**: Compilations of his comics, with titles like *How to Tell if Your Cat is Plotting to Kill You*.\n",
+      "- **Blog**: An area for additional content and updates.\n",
       "\n",
-      "## News and Announcements:\n",
-      "- **December 21, 2024**: Welcome to SuperDataScientists!\n",
-      "- **November 13, 2024**: Mastering AI and LLM Engineering – Resources.\n",
-      "- **October 16, 2024**: From Software Engineer to AI Data Scientist – Resources.\n",
-      "- **August 6, 2024**: Introduction to the Outsmart LLM Arena – a competition centered on strategy and diplomacy among LLMs.\n"
+      "### News and Announcements\n",
+      "- Matthew Inman has announced that his Netflix series is now streaming, expanding the reach of his creative work beyond the website.\n"
      ]
     }
    ],
@@ -110,7 +93,7 @@
     "\n",
     "openapi_key = os.getenv('OPENAI_API_KEY')\n",
     "\n",
-    "summarize(\"https://cnn.com\")"
+    "summarize(\"https://theoatmeal.com/\")"
    ]
   },
   {
@@ -122,11 +105,9 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d69d5d4-ee3b-4ff8-8fe6-b11d2ebe87f8",
+   "cell_type": "markdown",
+   "id": "6cbf76a8-bc8a-4c71-a697-3a51913ad306",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
