--- a/website-summarization/website_summarize_openai.ipynb
+++ b/website-summarization/website_summarize_openai.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "310f6402-df09-42e4-8bfa-ae2c15844f00",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import nbimporter\n",
