--- a/technical-tutor/gpt-tutor.ipynb
+++ b/technical-tutor/gpt-tutor.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "918b423a-361d-4809-8e90-3e62f4c12240",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please enter your question: Please explain what this code does and why: yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n"
+      "Please enter your question: how to execute all cells of jupyter lab automatically in sequence\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "8bb0eca7-b030-4dea-a0d3-725881fb6bc3",
    "metadata": {},
    "outputs": [],
@@ -76,70 +76,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "fa3fbcfd-c821-4804-862f-6103dcbea413",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Certainly! Let's break down the code snippet and explain its components step by step.\n",
+       "To execute all cells in a Jupyter Lab notebook automatically in sequence, you can use the built-in features of Jupyter Lab. Here's a step-by-step guide to do this:\n",
        "\n",
-       "### Code Explanation\n",
+       "### Method 1: Using the Menu\n",
        "\n",
-       "```python\n",
-       "yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
-       "```\n",
+       "1. **Open Jupyter Lab**: Start your Jupyter Lab environment.\n",
        "\n",
-       "#### Components Breakdown\n",
+       "2. **Select Your Notebook**: Open the notebook file (`.ipynb`) that you want to execute.\n",
        "\n",
-       "1. **Set Comprehension**:\n",
-       "   - `{book.get(\"author\") for book in books if book.get(\"author\")}`\n",
-       "   - This portion creates a **set** of authors from a collection of `books`.\n",
-       "   - **`book.get(\"author\")`**: This retrieves the value associated with the key `\"author\"` for each `book` dictionary in the `books` iterable. It returns `None` if `\"author\"` is not found.\n",
-       "   - **`for book in books`**: Iterates through each `book` object in the `books` collection.\n",
-       "   - **`if book.get(\"author\")`**: This condition ensures that only books with a non-empty and valid `\"author\"` entry are processed, effectively filtering out any books where the author is `None` or an empty string.\n",
+       "3. **Run All Cells**:\n",
+       "    - Go to the menu at the top of the Jupyter Lab interface.\n",
+       "    - Click on **Run**.\n",
+       "    - Select **Run All Cells**. \n",
        "\n",
-       "2. **Yield from**:\n",
-       "   - **`yield from`**: This is a special keyword in Python used in generators. It allows the generator to yield all values from another iterable, in this case, from the set created by the comprehension.\n",
-       "   - This means that every author in the resulting set will be yielded to the caller of the generator.\n",
+       "   This will execute all code cells in the order they appear in the notebook.\n",
        "\n",
-       "#### Purpose of the Code\n",
+       "### Method 2: Keyboard Shortcut\n",
        "\n",
-       "- The code is part of a generator function that retrieves unique authors from a collection of books. By using a set comprehension, it ensures that each author is listed only once (unique values).\n",
-       "  \n",
-       "- The filtered approach (using `if book.get(\"author\")`) helps avoid issues with `None` or empty author values, making sure only valid authors get yielded.\n",
+       "1. **Open Jupyter Lab** and your desired notebook.\n",
        "\n",
-       "### Example in Context\n",
+       "2. **Execute All Cells**:\n",
+       "   - You can use the keyboard shortcut `Shift + Enter` to run cells one by one manually.\n",
+       "   - To run all cells at once, you can usually use `Ctrl + Shift + Enter`, depending on your configuration.\n",
        "\n",
-       "Here’s how it could fit into a larger piece of code:\n",
+       "### Method 3: Using Jupyter Notebook Commands\n",
        "\n",
-       "```python\n",
-       "def unique_authors(books):\n",
-       "    yield from {book.get(\"author\") for book in books if book.get(\"author\")}\n",
+       "You can also utilize the following commands in a cell to programmatically execute all the other cells:\n",
        "\n",
-       "# Example usage\n",
-       "books = [\n",
-       "    {\"title\": \"Book 1\", \"author\": \"Author A\"},\n",
-       "    {\"title\": \"Book 2\", \"author\": None},\n",
-       "    {\"title\": \"Book 3\", \"author\": \"Author B\"},\n",
-       "    {\"title\": \"Book 4\", \"author\": \"Author A\"},\n",
-       "]\n",
+       "python\n",
+       "# Run all cells programmatically\n",
+       "from IPython.display import display, Javascript\n",
        "\n",
-       "for author in unique_authors(books):\n",
-       "    print(author)\n",
-       "```\n",
+       "def run_all_cells():\n",
+       "    display(Javascript('IPython.notebook.execute_all_cells()'))\n",
        "\n",
-       "#### Output:\n",
-       "```\n",
-       "Author A\n",
-       "Author B\n",
-       "```\n",
+       "run_all_cells()\n",
        "\n",
-       "### Summary\n",
        "\n",
-       "- The code leverages a generator to produce unique authors from a list of book dictionaries, filtering out any invalid entries.\n",
-       "- It allows the caller to iterate through the unique authors efficiently, only generating the required values when requested."
+       "### Additional Notes\n",
+       "\n",
+       "- **Cell Output**: When you execute all cells, check that you do not have any cells that unintentionally alter the state of the notebook or raise exceptions.\n",
+       "- **Kernel**: Make sure your notebook's kernel has been properly initialized with the necessary libraries before running all cells.\n",
+       "- **Dependencies**: Ensure the order of code execution respects any dependencies between cells (e.g., if cell A must run before cell B).\n",
+       "\n",
+       "By following these methods, you should be able to execute all cells in your Jupyter Lab notebook easily. Enjoy coding!"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -157,7 +146,7 @@
     "display_handle = display(Markdown(\"\"), display_id=True)\n",
     "for chunk in stream:\n",
     "    response += chunk.choices[0].delta.content or ''\n",
-    "    #response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
+    "    response = response.replace(\"```\",\"\").replace(\"markdown\", \"\")\n",
     "    update_display(Markdown(response), display_id=display_handle.display_id)"
    ]
   },
